--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "biharfm-mini-room",
+  "name": "fm-room-server",
   "version": "1.0.0",
-  "description": "Lightweight WebRTC room-based FM signaling server for BiharFM",
-  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.19.2",
-    "ws": "^8.17.0"
-  },
   "engines": {
-    "node": ">=18.x"
+    "node": "20.x"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "ws": "^8.16.0"
   }
 }
